change style update img button

--- a/src/main.scss
+++ b/src/main.scss
@@ -88,6 +88,15 @@ hr {
     width: 200px;
     border-radius: 50%;
   }
+
+  .img-hero {
+    width: 30px;
+    background-color: #fff;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 0.5rem;
+    margin: 0;
+  }
 }
 
 .status-profile {
